--- a/landing_Page/responsiveMobile.css
+++ b/landing_Page/responsiveMobile.css
@@ -241,13 +241,27 @@
           max-width: 95%;
       }
       } */
-    
-    
+      /* @media (max-width: 768px){
+        .footer{
+        }
+      } */
+     
       @media (max-width: 768px){
       .footer__container{
           padding: 0!important;
       }
     }
+    /* @media (max-width : 780px){
+        .footer__navigation{
+            align-items: flex-start;
+            display : flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: space-between;
+
+
+        }
+    } */
     @media (min-width: 768px){
     .footer .column {
         max-width: 160px;
@@ -255,13 +269,12 @@
     }
     @media (max-width: 768px){
     .footer .column__nested {
-        max-width: 95%;
-        display: flex;
-        
+         display: flex; 
         align-items: flex-start;
-        justify-content: space-between;
+        justify-content: space-between; 
         grid-gap: 30px;
         gap: 30px;
+        width: 50%;
     }
     }
     @media (max-width: 768px){
